--- a/generators/nitro.html
+++ b/generators/nitro.html
@@ -10,7 +10,7 @@
   <h1 class="Title">Discord Nitro Generator</h1>
   <div class="Input">
     <input type="text" id="input" class="Input-text" placeholder="Username#XXXX">
-    <label for="input" class="Input-label">Username</label>
+    <label for="input" class="Input-label">Discord Username</label>
   </div>
   <br>
   <div class="Input">
